<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfoRail</string>
    <string name="action_settings">Settings</string>
    <string name="main_instructions">Tap on the train you would like to know more about.</string>
    <string name="title_activity_selected_train">SelectedTrainActivity</string>
    <string name="seleted_train_instructions">Tap on a bubble to learn more.</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="quiz_instructions">Tap the circle beside the correct answer and click the next question.</string>
    <string name="title_activity_train_builder">TrainBuilderActivity</string>

    <!-- Subtitles -->
    <string name="subtitle_splash">Please proceed to the Locomotive Hall</string>
    <string name="subtitle_home">Select a train</string>
    <string name="subtitle_trainBuilder">Drag and drop your train parts to build your train.</string>
    <string name="quiz">Quiz</string>
    <string name="headerTitle">InfoRail - </string>
	
    <!-- Splash Activity -->
    <string name="splash_text">Next Stop: the Locomotive Hall</string>
    
    <!-- Selected Train Activity -->
    <string name="ok">OK</string>

    <!-- Quiz Activity -->

    <string name="noQuestionsAvailable">Sorry, there are currently no questions available for this train.</string>
    <string name="quiz_resutlts">Your Results</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect</string>
    <string name="winner">Congratulations! You have won the following train parts:</string>

    <!-- Train Builder Activity -->
    <string name="trainBuilder_trainPartsTitle">Your Train Cars</string>
    <string name="noTrainPartsInBuilder">No train to animate</string>
    <string name="tooManyCars">There is no space for anymore cars</string>

    <!-- Button Names -->
    <string name="menu_achievements">Achievements</string>
    <string name="menu_train_builder">Build Your Train</string>
    <string name="menu_quiz">Take Quiz Now</string>
    <string name="menu_home">Home</string>
    <string name="button_nextQuestion">Next Question</string>
    <string name="button_finishQuiz">Finish Quiz</string>
    <string name="button_retryQuiz">Retry Quiz</string>
    <string name="button_rebuild">Rebuild</string>
    <string name="button_play">Play</string>

    <!-- Messages -->
    <string name="noAnswerSelected">Please select an answer</string>

    <!-- Content Descriptions -->
    <string name="contentDescription_icon">InfoRail Logo</string>
    <string name="selected_train_image_info">An image of the selected train</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
   
    <string name="underDevelopment">Sorry, this section is currently under development.</string>

</resources>
