<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectedTrainActivity" >
	
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:orientation="vertical" >
        
        <TextView
	        android:id="@+id/selected_train_textView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:text="@string/seleted_train_instructions"
	        android:textSize="30sp" />

	    <ImageView
	        android:id="@+id/trainImageView"
	        android:layout_width="fill_parent"
	        android:layout_height="900dp"
	        android:layout_marginTop="20dp"
	        android:contentDescription="@string/selected_train_image_info"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:id="@+id/selected_train_name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:layout_marginBottom="20dp"
	        android:text="@string/title_activity_selected_train"
	        android:textSize="40sp" />
        
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        
        <Button android:id="@+id/homeButton" android:layout_width="wrap_content" 
            android:layout_height="wrap_content" android:layout_weight="1" 
            android:text="@string/menu_home"
            android:onClick="goToHome" />
        
        <Button android:id="@+id/quizButton" android:layout_width="wrap_content" 
            android:layout_height="wrap_content" android:layout_weight="1" 
            android:text="@string/menu_quiz"
            android:onClick="goToQuiz" />
        
        <Button android:id="@+id/trainBuilderButton" android:layout_width="wrap_content" 
            android:layout_height="wrap_content" android:layout_weight="1" 
            android:text="@string/menu_train_builder"
            android:onClick="goToTrainBuilder" />
        
    </LinearLayout>
    
</RelativeLayout>
