<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    style="@android:attr/buttonBarStyle" >
    
	    <Button
	        android:id="@+id/homeButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" 
	        android:text="@string/menu_home"
	        android:onClick="goToHome"
	        style="@style/train_button" />
	    
	    <Button
	        android:id="@+id/rebuildButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" 
	        android:text="@string/button_rebuild"
	        android:onClick="rebuildTrain"
	        style="@style/train_button" />
	    
	    <Button
	        android:id="@+id/trainBuilderButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_play"
	        style="@style/train_button" />

</LinearLayout>
