<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/home_instructions_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_instructions" />
    
    <LinearLayout android:id="@+id/footer" android:layout_width="fill_parent" 
        android:layout_height="wrap_content" android:orientation="horizontal" 
        android:layout_alignParentBottom="true" style="@android:style/ButtonBar">
        
        <Button android:id="@+id/achievementsButton" android:layout_width="wrap_content" 
            android:layout_height="wrap_content" android:layout_weight="1" 
            android:text="@string/menu_achievements" />
        
        <Button android:id="@+id/trainBuilderButton" android:layout_width="wrap_content" 
            android:layout_height="wrap_content" android:layout_weight="1" 
            android:text="@string/menu_train_builder" />
        
    </LinearLayout>
    
    <ListView 
        android:id="@+id/train_list_view"
        android:layout_above="@id/footer"
        android:layout_below="@id/home_instructions_textView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</RelativeLayout>