<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizActivity" >
	
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@android:attr/buttonBarStyle"
        android:orientation="horizontal" >
        
        <Button android:id="@+id/homeButton"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="@string/menu_home"
            style="@android:attr/buttonBarButtonStyle"
            android:onClick="goToHome" />
        
        <Button android:id="@+id/nextQuestionButton" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="@string/button_nextQuestion"
            style="@android:attr/buttonBarButtonStyle"
            android:onClick="nextQuestionHandler" />
        
        <Button android:id="@+id/trainBuilderButton" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:text="@string/menu_train_builder"
            style="@android:attr/buttonBarButtonStyle"
            android:onClick="goToTrainBuilder" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/quiz_content"
        android:layout_above="@id/footer"
        android:orientation="vertical"
        android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_horizontal" >
	    
        <ImageView 
	        android:id="@+id/quiz_image"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:adjustViewBounds="true"/>
 		
        <LinearLayout
            android:orientation="vertical"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal" >
            
            <TextView
		      android:id="@+id/quizQuestion"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:gravity="center_horizontal"
		      android:layout_marginTop="20dp"
		      android:text="@string/quiz_instructions" />
		    
			<LinearLayout 
			    android:id="@+id/answerContainer"
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center_horizontal" >
		  
			</LinearLayout>
		    <RadioGroup
		        android:id="@+id/radio_answerGroup"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="0dp"
		        android:layout_marginTop="30dp" >
		
		        <!-- Radio Buttons generated here -->
		    </RadioGroup>
            
        </LinearLayout>
	  	
        
    </LinearLayout>
    
    

</RelativeLayout>