<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrainBuilderActivity" >
    
    <RelativeLayout 
        android:id="@+id/trainBuilder_Content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true" >
        
         <HorizontalScrollView 
             android:id="@+id/trainPartCollection"
             android:layout_width="fill_parent"
             android:layout_height="100dp"
             android:layout_alignParentBottom="true"
             android:background="@drawable/train_builder_list_bg"  >
             
             <LinearLayout
                 android:id="@+id/trainParts"
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent" >
                 
             </LinearLayout>
             
         </HorizontalScrollView> 
         
        <TextView 
            android:id="@+id/trainBuilder_trainPartsTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/trainPartCollection"
            android:text="@string/trainBuilder_trainPartsTitle" />
        
        <RelativeLayout
            android:id="@+id/buildingArea"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/trainBuilder_trainPartsTitle"
            android:background="@drawable/trainbuilder_bg" >
			
            <LinearLayout
                android:id="@+id/trainContainer"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="184dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal" >
                
            </LinearLayout>
             
        </RelativeLayout>
        
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        style="@android:attr/buttonBarStyle" >
        
        <Button
	        android:id="@+id/homeButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" 
	        android:text="@string/menu_home"
	        android:onClick="goToHome"
	        style="@style/train_button" />
	    
	    <Button
	        android:id="@+id/rebuildButton" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" 
	        android:text="@string/button_rebuild"
	        android:onClick="rebuildTrain"
	        style="@style/train_button" />
	    
	    <Button
	        android:id="@+id/trainBuilderButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_play"
	        android:onClick="playTrain"
	        style="@style/train_button" />
        
    </LinearLayout>

</RelativeLayout>
